Generate data homework 4